--- a/src/libs/Proxy.template
+++ b/src/libs/Proxy.template
@@ -2,12 +2,15 @@
 namespace doublemcz\dibiorm\proxies\##CLASS_NAMESPACE##;
 
 use doublemcz\dibiorm\Manager;
+use doublemcz\dibiorm\IProxy;
 
-class ##CLASS_NAME## extends \##ORIGIN_CLASS_NAME## {
+class ##CLASS_NAME## extends \##ORIGIN_CLASS_NAME## implements IProxy {
 	/** @var Manager */
 	private $manager;
 	/** @var bool */
 	private $isInitialized = FALSE;
+	/** @var array */
+	protected $joiningMap;
 
 	public function __construct(Manager $manager)
 	{
@@ -34,8 +37,12 @@ class ##CLASS_NAME## extends \##ORIGIN_CLASS_NAME## {
 
    private function load()
    {
-      // TODO load dat somehow
-      f('LOAD DATA :-)');
       $this->initialized = true;
+      $this->manager->loadProxy($this);
+   }
+
+   public function getJoiningMap()
+   {
+      return $this->joiningMap;
    }
 }
