Change of package name in composer

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "doublemcz/dibiorm",
+	"name": "doublemcz/dibi-orm",
 	"description": "ORM system based on dibi",
 	"minimum-stability": "dev",
 	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
