Added autoload to composer

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,21 @@
 {
-	"name": "doublemcz/dibi-orm",
-	"description": "ORM system based on dibi",
-	"minimum-stability": "dev",
-	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
-	"authors": [
-		{
-			"name": "Martin Míka",
-			"email": "mail@martinmika.eu"
-		}
-	]
+  "name": "doublemcz/dibi-orm",
+  "description": "ORM system based on dibi",
+  "minimum-stability": "dev",
+  "license": [
+    "BSD-3-Clause",
+    "GPL-2.0",
+    "GPL-3.0"
+  ],
+  "authors": [
+    {
+      "name": "Martin Míka",
+      "email": "mail@martinmika.eu"
+    }
+  ],
+  "autoload": {
+    "files": [
+      "src/dibiorm.php"
+    ]
+  }
 }
